# skeino

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: protect-files.py  run-tests-on-stop.py
.claude/skills/add-api-endpoint/: SKILL.md
.claude/skills/cut-release/: SKILL.md
.claude/skills/respond-to-pr-review/: SKILL.md
.claude/skills/review-and-merge-prs/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
changelog.d/: 18.added.md  18.changed.md  25.added.md  25.changed.md  25.removed.md  27.changed.md  35.fixed.md  36.changed.1.md  36.changed.2.md  36.changed.md  48.fixed.md  49.fixed.md  52.fixed.md  67.fixed.md  README.md  field-descriptions.changed.md  postgres-checkpointer-pool.fixed.md  streaming-output-filter.fixed.md  streaming-settings.removed.md  streaming-standard.changed.md
docs/: getting-started.md  index.md
docs/api-reference/: explorer.md  http.md  python.md
docs/concepts/: assistants.md  configuration.md  persistence.md  streaming.md  threads-and-runs.md
docs/guides/: custom-checkpointer.md  deployment.md  embedding-fastapi.md  postgres.md
docs/stylesheets/: extra.css
overrides/: home.html
overrides/hooks/: gen_openapi.py
src/skeino/: __init__.py  app.py  config.py  langgraph_json.py  registry.py  usage.py
src/skeino/api/: __init__.py  _openapi.py  _request.py  assistants.py  health.py  runs.py  threads.py
src/skeino/concurrency/: __init__.py  run_registry.py  thread_locks.py
src/skeino/ops/: __init__.py  assistants.py  runs.py  threads.py
src/skeino/persistence/: __init__.py  base.py  checkpointer.py  enriching.py  in_memory_store.py  metadata_store.py  mongo_store.py  sqlite_store.py  uri.py
src/skeino/schemas/: __init__.py  assistants.py  common.py  runs.py  server.py  threads.py
src/skeino/serialization/: __init__.py  normalize.py  serialize.py
src/skeino/streaming/: __init__.py  incremental.py  runner.py  sse.py
tests/: conftest.py
tests/api/: conftest.py  test_cross_backend.py  test_metadata_durability.py  test_mongodb_backend.py  test_postgres_backend.py  test_redis_backend.py
tests/integration/: test_assistants_api.py  test_background_runs.py  test_health_api.py  test_openapi_request_bodies.py  test_openapi_snapshot.py  test_run_lifecycle.py  test_runs_api.py  test_sqlite_backend.py  test_streaming_api.py  test_thread_copy.py  test_thread_mutation.py  test_thread_read_resilience.py  test_threads_api.py
tests/integration/snapshots/: openapi.json
tests/unit/: test_checkpointer_registry.py  test_enriching.py  test_incremental_streaming.py  test_metadata_store.py  test_mongo_store.py  test_output_filtering.py  test_persistence_resolution.py  test_persistence_uri.py  test_registry.py  test_run_registry.py  test_schemas.py  test_serialization.py  test_sqlite_store.py  test_store_contract.py  test_streaming_sse.py  test_thread_copy_op.py  test_thread_locks.py  test_usage.py
