[tool.poetry]
name = "skeino"
version = "0.1.0"
description = "Reusable LangGraph dev-server replacement: threads, runs, streaming over any LangGraph graph."
authors = ["stocks-ai team"]
readme = "README.md"
packages = [{ include = "skeino", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "*"
pydantic = "^2.0"
pydantic-settings = "^2.0"
langgraph = "^1.0.0"
langgraph-checkpoint = ">=2.0.0"
langgraph-checkpoint-postgres = ">=2.0.0"
langchain-core = "*"
psycopg = { extras = ["binary", "pool"], version = "^3.3.3" }
python-dotenv = ">=1.0.1"
uvicorn = "^0.41.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
