[tool.poetry]
name = "skeino"
version = "1.0.1"
description = "Reusable, embeddable replacement for the langgraph dev HTTP server: threads, runs, streaming, and assistants over any LangGraph graph."
authors = ["Ranjit Jana <40226912+ranjitjana027@users.noreply.github.com>"]
maintainers = ["Ranjit Jana <40226912+ranjitjana027@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ranjitjana027/skeino"
repository = "https://github.com/ranjitjana027/skeino"
documentation = "https://ranjitjana027.github.io/skeino/"
keywords = ["langgraph", "fastapi", "server", "agents", "sse", "streaming", "checkpointer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
packages = [{ include = "skeino", from = "src" }]

[tool.poetry.urls]
"Changelog" = "https://github.com/ranjitjana027/skeino/blob/main/CHANGELOG.md"
"Issues" = "https://github.com/ranjitjana027/skeino/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "*"
pydantic = "^2.0"
pydantic-settings = "^2.0"
langgraph = "^1.0.0"
langgraph-checkpoint = ">=2.0.0"
langchain-core = "*"
python-dotenv = ">=1.0.1"
uvicorn = ">=0.41,<0.50"
# All database backends are OPTIONAL extras, imported lazily so the default
# install only ships the in-memory checkpointer. Pick a backend with the
# matching extra: skeino[postgres], skeino[sqlite], or skeino[mongodb].
# (Redis is supported via a lazy builder too, but is NOT a managed extra:
# langgraph-checkpoint-redis caps Python at <3.14, narrower than skeino's
# range — install it yourself: `pip install langgraph-checkpoint-redis`.)
psycopg = { extras = ["binary", "pool"], version = "^3.3.3", optional = true }
langgraph-checkpoint-postgres = { version = ">=2.0.0", optional = true }
aiosqlite = { version = ">=0.20.0", optional = true }
langgraph-checkpoint-sqlite = { version = ">=2.0.0", optional = true }
motor = { version = ">=3.4.0", optional = true }
langgraph-checkpoint-mongodb = { version = ">=0.1.0", optional = true }

[tool.poetry.extras]
postgres = ["psycopg", "langgraph-checkpoint-postgres"]
sqlite = ["aiosqlite", "langgraph-checkpoint-sqlite"]
mongodb = ["motor", "langgraph-checkpoint-mongodb"]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
ruff = ">=0.14.0"
mypy = ">=1.19.0,<3.0.0"
bandit = { version = ">=1.7.0", extras = ["toml"] }
towncrier = ">=24.8.0"
mongomock-motor = ">=0.0.30"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = { version = ">=9.5.0", extras = ["imaging"] }
mkdocstrings = { version = ">=0.26.0", extras = ["python"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
# .claude/ holds agent/editor tooling (e.g. hook scripts), not shippable
# package code, so it is exempt from the library lint rules (e.g. T201).
extend-exclude = [".claude"]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
# Optional/untyped backends imported lazily by the checkpointer builders and
# the Mongo metadata store. langgraph-checkpoint-redis is not even a managed
# extra (it caps Python at <3.14).
module = [
    "langgraph.checkpoint.redis.*",
    "langgraph.checkpoint.mongodb.*",
    "motor.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.towncrier]
# Changelog fragments live in changelog.d/ as `<id>.<type>.md` (one per change),
# so concurrent PRs never conflict on CHANGELOG.md. `towncrier build` collates
# them into a release section at release time. See changelog.d/README.md.
directory = "changelog.d"
filename = "CHANGELOG.md"
ignore = ["README.md"]
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/ranjitjana027/skeino/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
